objects/Account.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__vCustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__vSLAExpirationDate__c</fullName>
        <description>The expiration date of the current service level agreement.</description>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__vSLASerialNumber__c</fullName>
        <description>The agreement serial number that identifies the current service level agreement.</description>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__vSLA__c</fullName>
        <description>The service level agreement for this account which defines the level of service provided to the account with values such as gold, silver or bronze. The values are entirely customizable.</description>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>SCP_Certa_GC__Mis_cuentas_SCP</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>Mis cuentas SCP</label>
        <language>es</language>
    </listViews>
    <recordTypes>
        <fullName>SCP</fullName>
        <active>true</active>
        <description>Utilizado para los perfiles que deban crear cuentas usadas para SCP</description>
        <label>SCP</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Billing</fullName>
        <active>true</active>
        <description>Use a billing account to add an alternate billing profile to a business account, consumer account or billing aggregator account.</description>
        <label>Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__BillingAggregator</fullName>
        <active>true</active>
        <description>Use a billing aggregator account for large business customers to organize multiple sets of billing accounts in a billing account hierarchy.</description>
        <label>Billing Aggregator</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Business</fullName>
        <active>true</active>
        <description>Use business accounts for customers that are businesses, organizations or other public or private agencies.</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Consumer</fullName>
        <active>true</active>
        <description>Use consumer accounts for customers who are individual consumers, families or small office/home offices.</description>
        <label>Consumer</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneAccount</fullName>
        <active>true</active>
        <label>MobilePhoneAccount</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Other</fullName>
        <active>true</active>
        <description>Use other accounts for organizations that are not a customer.</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Service</fullName>
        <active>true</active>
        <description>Use service accounts to add an additional service location to a business account, consumer account or service aggregator account.</description>
        <label>Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ServiceAggregator</fullName>
        <active>true</active>
        <description>Use a service aggregator account for large business customers to organize multiple sets of service locations in a service account hierarchy.</description>
        <label>Service Aggregator</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SCP_Certa_GC__CuentaGestion_DebeTener_CPrincipal</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Type,&quot;Cuenta de Gestion&quot;) &amp;&amp; ParentId == null, true, false)</errorConditionFormula>
        <errorMessage>Las cuentas de tipo gestión deben tener una cuenta principal asociada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCP_Certa_GC__CuentasCabeceras_sinCuentaPrincipal</fullName>
        <active>true</active>
        <description>Las cuentas cabecera no pueden tener asociada una cuenta principal.</description>
        <errorConditionFormula>IF(ISPICKVAL(Type,&quot;Cuenta Cabecera&quot;) &amp;&amp; ParentId != null, true, false)</errorConditionFormula>
        <errorMessage>Las cuentas cabecera no pueden tener asociada una cuenta principal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCP_Certa_GC__Id_cliente_legado_diez_caracteres</fullName>
        <active>true</active>
        <description>El campo id cliente legado debe tener 10 caracteres.</description>
        <errorConditionFormula>IF(AND(LEN(SCP_Certa_GC__idClienteLegado__c)!= 10, SCP_Certa_GC__idClienteLegado__c != null), true, false)</errorConditionFormula>
        <errorMessage>El campo Id Cliente Legado debe tener 10 caracteres.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCP_Certa_GC__campo_telefono_solo_puede_ser_numero</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK(Phone) , false, NOT(ISNUMBER( Phone )))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>El telefono solo puede tener caracteres numericos</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__EnforceAutoPaymentMethodPicked</fullName>
        <active>true</active>
        <description>Auto payment method and auto payment amount need to be filled when auto payment is checked.</description>
        <errorConditionFormula>( vlocity_cmt__EnableAutopay__c )  &amp;&amp;  (ISNULL( vlocity_cmt__AutoPaymentMethodId__c )  ||    ISPICKVAL( vlocity_cmt__AutoPaymentAmount__c , &apos;&apos;)  )</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EnableAutopay__c</errorDisplayField>
        <errorMessage>Please choose the auto payment method and payment amount to enable the auto payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__EnforceBillingEmailAdressFilled</fullName>
        <active>true</active>
        <description>Billing email address needs to be specified if email is selected for bill delivery method.</description>
        <errorConditionFormula>ISPICKVAL(vlocity_cmt__BillDeliveryMethod__c, &apos;eMail&apos;) &amp;&amp;   (ISNULL(vlocity_cmt__BillingEmailAddress__c)  ||  ISBLANK(vlocity_cmt__BillingEmailAddress__c) )</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__BillDeliveryMethod__c</errorDisplayField>
        <errorMessage>Please fill in your billing email address.</errorMessage>
    </validationRules>
</CustomObject>